Changed font-size. Added scrolling parents.

--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
 
       <img class="parallax" src="assets/img/veronica2.png" y="background" alt="" du-parallax style="width:100%;"></img>
 
-      <p id="veronica" class="direct" >Olá! Eu sou a Veronica...</p>
+      <p id="veronica" class="direct" >Olá! Eu sou a Veronica. <br>Estes são os meus pais.</p>
 
-      <div id="parents" class="inverse">
-        <img data-bottom-center="margin-left:-45%;" data-center-center="margin-left:0%;" id="mom" src="assets/img/aga.png"/>
-        <span>Estes são os meus pais.</span>
-        <img data-bottom-center="margin-right:-45%;" data-center-center="margin-right:0%;" id="dad" src="assets/img/ricardo.png"/>
+
+      <div id="parents" class="direct">
+        <div data-bottom-center="right:-4%;" data-top-center="right:-68%;">
+        <img src="assets/img/parents1.png"/>
+        <img src="assets/img/parents4.png"/>
+        <img src="assets/img/parents3.png"/>
+        <img src="assets/img/parents2.png"/>
+        <img src="assets/img/parents5.png"/>
+        </div>
       </div>
 
       <p id="story" class="direct">
@@ -75,7 +80,7 @@
       <img class="parallax" du-parallax src="assets/img/veronica_baby.png" y="background" alt=""></img>
       
       <p class="direct">
-        Depois fui crescendo e agora que vou fazer 4 anos comecei a perguntar... Porque é que a mãe não se chama Agnieszka Pomar? ;)
+        Depois fui crescendo e comecei a perguntar... Porque é que a mãe não se chama Agnieszka Pomar? ;)
       </p>
 
       <img class="parallax" src="assets/img/aga_pomar.png" y="background" alt="" du-parallax ></img>
@@ -96,13 +101,13 @@
         <img class="parallax" src="assets/img/veronica_date.png" y="rolling" alt="" du-parallax style="width:100%;"></img>
       </div>
   
-      <p id="venue" class=" inverse" >
-      O casamento vai ser no <a  target="_blank" class="direct highlight" href="http://www.evorahotel.pt/">Évora Hotel</a>, e quem quiser pode ficar lá a dormir, ou a brincar ou outras coisas que o hotel tem.
+      <p id="venue" class=" direct" >
+      O casamento vai ser no <a  target="_blank" class="inverse highlight" href="http://www.evorahotel.pt/">Évora Hotel</a>, e quem quiser pode ficar lá a dormir, ou a brincar ou outras coisas que o hotel tem.
       </p>
 
       <iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.pt/maps/ms?gl=pt&amp;ptab=2&amp;ie=UTF8&amp;oe=UTF8&amp;msa=0&amp;msid=201681957757175863216.0004e085cc8a1f970ac61&amp;t=h&amp;ll=38.56374,-7.932864&amp;spn=0,0&amp;output=embed"></iframe>
 
-      <p  class="inverse">
+      <p  class="direct">
       Têm é que dizer que são convidados para o casamento da Agnieszka e Ricardo para as... (como é que se diz isto?)... con-di-ções... especiais!
       </p>
 
