--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <span class="upArrow arrows"><div class="navHelp">(Barra de Navegação)</div> </span>
 
           <div class='anchor'>
-            <span class="aga names" ng-click="switchLanguage('pl')">Agnieszka<div>(Polaco)</div></span> <span class="sep">/</span> <span class="ric names" ng-click="switchLanguage('pt')">Ricardo<div>(Português)</div></span>
+            <span class="aga names" ng-click="switchLanguage('pl')">Agnieszka<div>(Polski)</div></span> <span class="sep">/</span> <span class="ric names" ng-click="switchLanguage('pt')">Ricardo<div>(Português)</div></span>
           </div>
   
           <span class="downArrow arrows"><div class="scrollHelp">( Scroll )</div></span>
