Changed hidden message for mobiles only

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </div>
 
 
-    <div class="hidden-md hidden-lg">
+    <div class="hidden-sm hidden-md hidden-lg">
       
       Visualizar num computador desktop, por favor!
 
     </div>
 
-    <div skrollr class="hidden-xs hidden-sm">
+    <div skrollr class="hidden-xs">
 
       <div id='navigation' class='nav'  data-0="opacity:0;" data-20p="opacity:1;" >
         <span class="aga names" ng-click="switchLanguage('pl')">Agnieszka</span> / <span class="ric names" ng-click="switchLanguage('pt')">Ricardo</span>
