--- a/app/index.html
+++ b/app/index.html
@@ -13,9 +13,10 @@
     </div>
 
 
-    <div class="hidden-sm hidden-md hidden-lg">
+    <div id="fallback" class="hidden-sm hidden-md hidden-lg direct">
       
-      Visualizar num computador desktop, por favor!
+      <p>Prosimy o otwieranie i przeglądanie strony na komuterze.</p>
+      <p>Visualizar num computador desktop, por favor!</p>
 
     </div>
 
