Changed .png to the original .jpg.

--- a/index.html
+++ b/index.html
@@ -64,32 +64,32 @@
 
         <div ng-class="{hidden: !language}">
 
-          <img class="parallax" src="assets/img/veronica2.png" y="background" alt="" du-parallax style="width:100%;"></img>
+          <img class="parallax" src="assets/img/veronica2.jpg" y="background" alt="" du-parallax style="width:100%;"></img>
 
           <p id="veronica" class="inverse" >{{ content.text.veronica }} <br>{{ content.text.parents }}</p>
 
 
           <div id="parents" class="inverse">
             <div data-bottom-top="right:-100%;" data-top-bottom="right:-300%;">
-            <img src="assets/img/parents1.png"/>
+            <img src="assets/img/parents1.jpg"/>
             <img src="assets/img/parents4.png"/>
-            <img src="assets/img/parents3.png"/>
-            <img src="assets/img/parents2.png"/>
+            <img src="assets/img/parents3.jpg"/>
+            <img src="assets/img/parents2.jpg"/>
             <img src="assets/img/parents5.png"/>
-            <img src="assets/img/parents1.png"/>
+            <img src="assets/img/parents1.jpg"/>
             <img src="assets/img/parents4.png"/>
-            <img src="assets/img/parents3.png"/>
-            <img src="assets/img/parents2.png"/>
+            <img src="assets/img/parents3.jpg"/>
+            <img src="assets/img/parents2.jpg"/>
             <img src="assets/img/parents5.png"/>
-            <img src="assets/img/parents1.png"/>
+            <img src="assets/img/parents1.jpg"/>
             <img src="assets/img/parents4.png"/>
-            <img src="assets/img/parents3.png"/>
-            <img src="assets/img/parents2.png"/>
+            <img src="assets/img/parents3.jpg"/>
+            <img src="assets/img/parents2.jpg"/>
             <img src="assets/img/parents5.png"/>
-            <img src="assets/img/parents1.png"/>
+            <img src="assets/img/parents1.jpg"/>
             <img src="assets/img/parents4.png"/>
-            <img src="assets/img/parents3.png"/>
-            <img src="assets/img/parents2.png"/>
+            <img src="assets/img/parents3.jpg"/>
+            <img src="assets/img/parents2.jpg"/>
             <img src="assets/img/parents5.png"/>
             </div>
           </div>
@@ -98,7 +98,7 @@
             {{content.text.meeting}}
           </p>
 
-          <img class="parallax" src="assets/img/varsovia.png" y="background" alt="" du-parallax style="width:100%;"></img>
+          <img class="parallax" src="assets/img/varsovia.jpg" y="background" alt="" du-parallax style="width:100%;"></img>
 
           <p class="inverse">
             {{ content.text.moving }}
@@ -115,13 +115,13 @@
             {{ content.text.birth }}
           </p>
 
-          <img class="parallax" du-parallax src="assets/img/veronica_baby.png" y="background" alt=""></img>
+          <img class="parallax" du-parallax src="assets/img/veronica_baby.jpg" y="background" alt=""></img>
           
           <p class="inverse">
             {{ content.text.growing }} ;)
           </p>
 
-          <img class="parallax" src="assets/img/aga_pomar.png" y="background" alt="" du-parallax ></img>
+          <img class="parallax" src="assets/img/aga_pomar.jpg" y="background" alt="" du-parallax ></img>
 
           <p id="invite" class="inverse">
             {{ content.text.wedding }}
@@ -136,7 +136,7 @@
           </p>
 
           <div id="chalk" class=" inverse separator">
-            <img class="parallax" src="assets/img/veronica_date.png" y="rolling" alt="" du-parallax style="width:100%;"></img>
+            <img class="parallax" src="assets/img/veronica_date.jpg" y="rolling" alt="" du-parallax style="width:100%;"></img>
           </div>
       
           <p id="venue" class=" inverse" >
@@ -180,7 +180,7 @@
             <a href="mailto:agnieszka.ricardo@gmail.com" class="direct highlight">agnieszka.ricardo@gmail.com</a>
           </p>
 
-           <img class="parallax" src="assets/img/session2.png" y="background" alt="" du-parallax ></img>
+           <img class="parallax" src="assets/img/session2.jpg" y="background" alt="" du-parallax ></img>
 
           <p class="inverse">
             {{ content.text.kisses }}
